--- a/index.html
+++ b/index.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Easy Flexbox</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <header class="page-header">
+            <div class="content">
+                <a href="#" class="logo">Forrest Coffee</a>
+                <nav class="menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Menu</a></li>
+                    </ul>
+                </nav>
+                <a href="#" class="contact">Contact</a>
+            </div>
+        </header>
+        <main class="page-main">
+            <div class="content">
+                <div class="phone">
+                    <img src="assets/img/iphone.png" alt="">
+                </div>
+                <div class="checklist">
+                    <ul>
+                        <li>
+                            <p>Easy flexbox</p>
+                        </li>
+                        <li>
+                            <p>Responsive</p>
+                        </li>
+                        <li>
+                            <p>Navigation bar</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </main>
+        <footer class="page-footer">
+            <div class="content">
+                <p class="slogan">Always do more than expected © Andrew Silent</p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
